--- a/.github/workflows/git-push-dev.yml
+++ b/.github/workflows/git-push-dev.yml
@@ -1,8 +1,8 @@
-name: Git push into another repo to deploy to vercel
+name: Git push into another repo (dev)
 
 on:
   push:
-    branches: [main]
+    branches: [develop]
 
 jobs:
   build:
@@ -25,6 +25,6 @@ jobs:
           destination-repository-name: ${{ secrets.PRIVATE_REPO_NAME }}
           user-email: ${{ secrets.PRIVATE_REPO_EMAIL }}
           commit-message: ${{ github.event.commits[0].message }}
-          target-branch: main
+          target-branch: develop
       - name: Test get variable exported by push-to-another-repository
         run: echo $DESTINATION_CLONED_DIRECTORY
