setting : 레포를 Copy하는 Github Action 워크플로우 파일내용을 재변경 - branches가 잘못 설정됨

--- a/.github/workflows/copy-repo-prod.yml
+++ b/.github/workflows/copy-repo-prod.yml
@@ -3,7 +3,7 @@ name: Copy into another repo (prod)
 on:
   pull_request:
     types: [closed]
-    branches: [develop] # develop -> main으로 PR 했을 때
+    branches: [main] # develop -> main으로 병합 요청(PR) 시
 
 jobs:
   build:
