--- a/.github/workflows/copy-repo-dev.yml
+++ b/.github/workflows/copy-repo-dev.yml
@@ -3,7 +3,7 @@ name: Copy into another repo (dev)
 on:
   pull_request:
     types: [closed]
-    branches: [feature/**] # feature/** -> develop으로 PR 했을 때
+    branches: [develop] # feature/** -> develop으로 병합 요청(PR) 시
 
 jobs:
   build:
