--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     types: [opened, reopened]
 
+  push:
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
