--- a/package.json
+++ b/package.json
@@ -8,12 +8,28 @@
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
+  "dependencies": {
+    "next": "^14.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@wepl/ui": "*"
+  },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "@next/eslint-plugin-next": "^14.1.1",
+    "@types/node": "^20.11.24",
+    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.61",
+    "@wepl/eslint-config": "*",
+    "@wepl/tailwind-config": "*",
     "@wepl/typescript-config": "*",
-    "turbo": "latest"
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "postcss": "^8.4.35",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
+    "turbo": "latest",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18"
