setting : FSD에 맞게 src 폴더 구성 & 라이브러리 적용

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "@wepl/ui": "*"
+  },
+  "devDependencies": {
+    "@wepl/eslint-config": "*",
+    "@wepl/tailwind-config": "*",
+    "@wepl/typescript-config": "*"
+  }
 }
