--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "plugins": [{ "name": "next" }]
   },
+  "baseUrl": ".",
+  "paths": {
+    "@/*": "./*"
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
