--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,13 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@wepl/ui": "*",
+    "axios": "^1.6.8",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "undici": "^5.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
