fix : root package - client test library root로 이동

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,8 +18,6 @@
   "devDependencies": {
     "@wepl/eslint-config": "*",
     "@wepl/tailwind-config": "*",
-    "@wepl/typescript-config": "*",
-    "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-testing-library": "^6.2.2"
+    "@wepl/typescript-config": "*"
   }
 }
