--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,7 @@
   "sideEffects": [
     "**/*.css"
   ],
-  "main": "./index.tsx", 
+  "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
   "scripts": {
@@ -33,6 +33,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.379.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
