feat : 컴포넌트 패키지 경로 변경, shadcn-ui 컴포넌트 경로 변경

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -15,7 +15,7 @@
         "./src/*"
       ],
       "@ui/*": [
-        "../../packages/ui/*"
+        "../../packages/ui/src/*"
       ]
     },
     "strictNullChecks": true
