--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,8 +4,8 @@
   "sideEffects": [
     "**/*.css"
   ],
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "main": "./src/index.tsx",
+  "types": "./src/index.tsx",
   "license": "MIT",
   "scripts": {
     "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
