fix : 빌드 오류 수정

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -16,6 +16,9 @@
       ],
       "@ui/*": [
         "../../packages/ui/src/*"
+      ],
+      "@ui/style/*": [
+        "../../packages/ui/style/*"
       ]
     },
     "strictNullChecks": true
