feat : layout tnw 수정

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -14,9 +14,9 @@
       "@fsd/*": [
         "./src/*"
       ],
-      "@ui/*": [
-        "../../packages/ui/src/*"
-      ],
+      // "@ui/*": [
+      //   "../../packages/ui/src/*"
+      // ],
       "@ui/style/*": [
         "../../packages/ui/style/*"
       ]
