--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@ui/shadcn-ui",
-    "ui": "@ui/shadcn-ui",
-    "utils": "@ui/lib/utils"
+    "utils": "@ui/lib/utils",
+    "ui": "@ui/shadcn-ui"
   }
 }
