fix: packge/ui package.json 수정

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,9 +10,9 @@
     "./style/*": "./style/*"
   },
   "scripts": {
-    "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+    "build": "tailwindcss -i ./styles.css -o ./dist/index.css",
     "lint": "eslint src/",
-    "dev": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+    "dev": "tailwindcss -i ./styles.css -o ./dist/index.css --watch",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch"
