--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts", "jest.setup.js",
   ],
   "exclude": [
     "node_modules"
