--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@tanstack/react-query-devtools": "^5.32.0",
     "@wepl/ui": "*",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.1",
     "zustand": "^4.5.2"
   },
