--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -21,7 +21,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts", "jest.setup.js",
+    ".next/types/**/*.ts",
   ],
   "exclude": [
     "node_modules"
