--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "@wepl/typescript-config/nextjs.json",
   "compilerOptions": {
     "jsx": "react-jsx", // 또는 "react"
     "strict": true,
@@ -9,7 +8,13 @@
     "baseUrl": ".",
     "paths": {
       "@ui/*": ["./*"]
-    }
+    },
   },
-  "include": [".", "src", "./jest.setup.js"]
+  "include": 
+  [
+    "../../node_modules/@types",
+    "../../node_modules/@testing-library", 
+    ".", 
+    "src", 
+  ]
 }
