--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "exports": {
     "./*": "./src/*",
-    "./components" : "./src/components/*",
+    "./components": "./src/components/*",
     "./style/*": "./style/*"
   },
   "scripts": {
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
