--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "turbo run test:watch"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.0",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@wepl/ui": "*",
@@ -24,8 +25,8 @@
     "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.3.0",
     "react-hook-form": "^7.51.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.1",
     "zustand": "^4.5.2"
   },
