--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint-config-turbo": "^2.0.5",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "qs": "^6.12.1",
