--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "eslint-config-turbo": "^2.0.5",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "qs": "^6.12.1",
@@ -62,7 +61,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "turbo": "latest",
+    "turbo": "^2.0.5",
     "typescript": "^5.3.3",
     "undici": "^6.18.2"
   },
