--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -51,8 +51,12 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js
+      - name: Generate Environment Variables File
+        run: |
+          echo "SUPABASE_URL=$SUPABASE_URL" >> .env.production
+          echo "SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY" >> .env.production
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+      - name: Build with Next.js
         run: npm run build
