--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -53,10 +53,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Generate Environment Variables File
         run: |
-          echo "SUPABASE_URL=$SUPABASE_URL" >> .env.production
-          echo "SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY" >> .env.production
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.production
+          echo "SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env.production
       - name: Build with Next.js
         run: npm run build
