fix : build 워크플로우 수정 5

--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -54,6 +54,6 @@ jobs:
       - name: Build with Next.js
         run: |
           touch .env.local
-          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.local
-          echo "SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env.local
+          echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} >> .env.local
+          echo SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} >> .env.local
           npm run build
