--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@wepl/typescript-config": "*",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
+    "eslint-config-turbo": "^2.0.5",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
