--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -51,9 +51,10 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js
+      - name: Generate env file in app/client
         run: |
-          touch .env.local
-          echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} >> .env.local
-          echo SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} >> .env.local
-          npm run build
+          cd apps/client
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env
+          echo "SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env
+      - name: Build with Next.js
+        run: npm run build
