setting : 테스트 Github 워크플로우 추가

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "turbo type-check",
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test": "turbo run test",
     "test:wepl": "turbo run test --filter=client",
     "test:ui": "turbo run test --filter=@wepl/ui",
     "test:watch": "turbo run test:watch"
