--- a/.github/workflows/test-check.yml
+++ b/.github/workflows/test-check.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+      - name: Build packages/ui
+        run: npm run build:ui
       - name: Install dependencies
         run: npm ci
       - name: Test app/client & packages/ui
