setting : packages/ui 빌드 명령어 수정

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "build:ui": "turbo build --filter=@wepl/ui",
+    "build:ui": "npm run build --prefix ./packages/ui",
     "dev": "turbo dev --filter=client",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
