--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-plugin-context": "^2.9.0",
     "msw": "^2.2.14",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8.4.35",
     "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
