--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "turbo run test:watch"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.0",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@wepl/ui": "*",
@@ -49,6 +50,7 @@
     "@wepl/typescript-config": "*",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
+    "eslint-config-turbo": "^2.0.5",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
@@ -61,7 +63,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "turbo": "latest",
+    "turbo": "^2.0.5",
     "typescript": "^5.3.3",
     "undici": "^6.18.2"
   },
