--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type-check": "turbo type-check",
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "turbo run test",
+    "test": "turbo run test -- --coverage",
     "test:wepl": "turbo run test --filter=client",
     "test:ui": "turbo run test --filter=@wepl/ui",
     "test:watch": "turbo run test:watch"
