fix : 테스트 깃헙 워크플로우 수정 - codecov에 패키지별로 테스트 커버리지 파일 업로드

--- a/.github/workflows/test-check.yml
+++ b/.github/workflows/test-check.yml
@@ -22,9 +22,20 @@ jobs:
         run: npm ci
       - name: Test app/client & packages/ui
         run: npm run test
-      - name: Upload coverage reports to Codecov
+      - name: Upload app/client coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./apps/client/coverage/icov.info
+          flags: app/client
+          name: app/client-coverage
+      - name: Upload packages/ui coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./packages/ui/coverage/icov.info
+          flags: packages/ui
+          name: packages/client-coverage
+        
 
         
