--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "js-base64": "^3.7.7",
+    "moment": "^2.30.1",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "qs": "^6.12.1",
